FSR-1237: Fix spacing in 'LATEST LEVELS'

--- a/server/src/sass/components/_latest-levels-box.scss
+++ b/server/src/sass/components/_latest-levels-box.scss
@@ -13,6 +13,7 @@
     text-transform: uppercase;
     background-color: #1C70B8;
     color: white;
+    word-spacing: 0.15em;
   }  
   &__supplementary {
     @include govuk-font($size: 16);
